[gd_scene load_steps=19 format=2]

[ext_resource path="res://world_environment.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/PressStart2P-vaV7_48pt.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/PressStart2P-vaV7_26pt.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/PressStart2P-vaV7_18pt.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/PressStart2P-vaV7_90pt.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/gameimages/POMOBLAST.PNG" type="Texture" id=6]
[ext_resource path="res://assets/gameimages/DungeonFight.PNG" type="Texture" id=7]
[ext_resource path="res://assets/gameimages/PomoBITEGraphic.png" type="Texture" id=8]
[ext_resource path="res://assets/gameimages/SlowFruitMenu.png" type="Texture" id=9]
[ext_resource path="res://assets/gameimages/pomodefense_splash.PNG" type="Texture" id=10]
[ext_resource path="res://Menu/SingleplayerOptionsScreen.gd" type="Script" id=11]
[ext_resource path="res://Menu/fade_in.tscn" type="PackedScene" id=12]
[ext_resource path="res://Menu/fade_out.tscn" type="PackedScene" id=13]
[ext_resource path="res://Menu/Background.gd" type="Script" id=14]
[ext_resource path="res://assets/textures/water.png" type="Texture" id=15]
[ext_resource path="res://assets/textures/Game_Settings_Box.png" type="Texture" id=16]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec2 tiled_factor = vec2(1, 1);
uniform	float aspect_ratio = 0.5;
uniform float wave_height = 0.04;
uniform vec2 wave_width_factor = vec2(5.0, 1.0);
uniform float wave_speed_factor = 0.2;

void fragment() {
	vec2 tiled_uvs = UV * tiled_factor;
	tiled_uvs.y *= aspect_ratio;
	vec2 waves_offset;
	waves_offset.x = cos(TIME * wave_speed_factor + (-tiled_uvs.y + tiled_uvs.x) * wave_width_factor.x );
	waves_offset.y = sin(TIME * wave_speed_factor + (-tiled_uvs.y) * wave_width_factor.y );
	float full_range_offset_x = -1.0 + 2.0 * waves_offset.x;
	float full_range_x = -1.0 + 2.0 * tiled_uvs.x;
	float inward_waves = -0.03 + sin(TIME * wave_speed_factor - full_range_x - full_range_offset_x * waves_offset.y * 0.5) * 0.01;
	vec4 colorize = vec4(vec3(0.88, 0.32, 0.64) * 0.3 + inward_waves, 1);
	COLOR = texture( TEXTURE, tiled_uvs + waves_offset * wave_height ) * colorize;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/tiled_factor = Vector2( 1, 1 )
shader_param/aspect_ratio = 0.475667
shader_param/wave_height = 0.04
shader_param/wave_width_factor = Vector2( 5, 1 )
shader_param/wave_speed_factor = 0.2

[node name="SingleplayerOptionScreen" type="Control"]
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" parent="." instance=ExtResource( 1 )]

[node name="Window" type="Sprite" parent="."]
modulate = Color( 0.337255, 0.278431, 0.278431, 0.85098 )
position = Vector2( 954, 445 )
scale = Vector2( 5.2828, 4.98758 )
texture = ExtResource( 16 )

[node name="Container" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1074.0
margin_bottom = 1074.0
rect_rotation = -0.105083
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="VBoxContainer" parent="Container"]
visible = false
margin_left = 42.0
margin_top = 12.0
margin_right = 42.0
margin_bottom = 12.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="Container/Center"]
visible = false
margin_right = 1062.0
margin_bottom = 81.0
custom_colors/font_color = Color( 0.654902, 0.678431, 0.776471, 1 )
custom_colors/font_color_shadow = Color( 0.117647, 0.133333, 0.152941, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 3
custom_fonts/font = ExtResource( 4 )
text = "<As a> user, <I want to> be able to setup my singleplayer 
minigame session <so that> I can focus on what to study on 
while I play mini games by myself.
"

[node name="DungeonFightTemporaryNavigation" type="Button" parent="Container/Center"]
visible = false
margin_top = 135.0
margin_right = 1062.0
margin_bottom = 159.0
custom_fonts/font = ExtResource( 4 )
text = "Temporary Navigation for Dungeon-Fight"

[node name="PomoBlast" type="Button" parent="Container/Center"]
visible = false
margin_top = 174.0
margin_right = 1062.0
margin_bottom = 198.0
custom_fonts/font = ExtResource( 4 )
text = "Temporary Navigation for Pomo Blast"

[node name="RichTextLabel" type="RichTextLabel" parent="Container"]
margin_left = 42.0
margin_top = 12.0
margin_right = 42.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 5 )
text = "Game Settings
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="Button" parent="Container"]
margin_right = 84.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Single_Player_Container" type="HBoxContainer" parent="."]
margin_left = 200.0
margin_top = 70.0
margin_right = 1649.0
margin_bottom = 250.0
size_flags_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Single_Player_Label" type="RichTextLabel" parent="Single_Player_Container"]
margin_right = 1449.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 5 )
text = "  Single Player 
 Session Options"
scroll_active = false

[node name="FadeOut" parent="." instance=ExtResource( 13 )]
visible = false
color = Color( 0, 0, 0, 0 )

[node name="Method_Of_Flashcard_Selection_Container" type="HBoxContainer" parent="."]
margin_left = 70.0
margin_top = 325.0
margin_right = 370.0
margin_bottom = 399.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Method_Selection_Label" type="RichTextLabel" parent="Method_Of_Flashcard_Selection_Container"]
margin_right = 300.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
text = "Selection Method:"

[node name="Method_Selection_Button" type="OptionButton" parent="."]
margin_left = 380.0
margin_top = 325.0
margin_right = 528.0
margin_bottom = 385.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deck_Selection_Container" type="HBoxContainer" parent="."]
margin_left = 70.0
margin_top = 450.0
margin_right = 370.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deck_Selection_Label" type="RichTextLabel" parent="Deck_Selection_Container"]
margin_right = 300.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
text = "Deck Selection:
"
scroll_active = false

[node name="Deck_Selection_Button" type="OptionButton" parent="."]
margin_left = 380.0
margin_top = 450.0
margin_right = 528.0
margin_bottom = 510.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Category_Selection_Container" type="HBoxContainer" parent="."]
visible = false
margin_left = 60.0
margin_top = 515.0
margin_right = 360.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Category_Selection_Label" type="RichTextLabel" parent="Category_Selection_Container"]
margin_right = 300.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
text = "Category Selection:"
scroll_active = false

[node name="Category_Selection_Button" type="OptionButton" parent="."]
visible = false
margin_left = 380.0
margin_top = 515.0
margin_right = 528.0
margin_bottom = 575.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_Selection_Container" type="HBoxContainer" parent="."]
margin_left = 70.0
margin_top = 575.0
margin_right = 370.0
margin_bottom = 645.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_Selection_Label" type="RichTextLabel" parent="Timer_Selection_Container"]
margin_right = 300.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
text = "Desired Time:"
scroll_active = false

[node name="Timer_Selection_Button" type="OptionButton" parent="."]
margin_left = 380.0
margin_top = 575.0
margin_right = 528.0
margin_bottom = 635.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_Button" type="Button" parent="."]
margin_left = 60.0
margin_top = 750.0
margin_right = 180.0
margin_bottom = 795.0
text = "Start"

[node name="Back_Button" type="Button" parent="."]
margin_left = 195.0
margin_top = 750.0
margin_right = 320.0
margin_bottom = 795.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Selection" type="HSplitContainer" parent="."]
margin_left = 700.0
margin_top = 300.0
margin_right = 1857.0
margin_bottom = 825.0
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplit_Game_Container" type="VSplitContainer" parent="Game_Selection"]
margin_right = 572.0
margin_bottom = 525.0
size_flags_horizontal = 3
size_flags_vertical = 3
dragger_visibility = 1

[node name="Games_Selection_Label" type="RichTextLabel" parent="Game_Selection/VSplit_Game_Container"]
margin_right = 572.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
text = "Game(s):
[]"

[node name="Game_Details_Label" type="RichTextLabel" parent="Game_Selection/VSplit_Game_Container"]
margin_top = 268.0
margin_right = 572.0
margin_bottom = 525.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 4 )
text = "Click Details for more information on each game."

[node name="Games_Scroll_Container" type="ScrollContainer" parent="Game_Selection"]
margin_left = 584.0
margin_right = 1157.0
margin_bottom = 525.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Games_Container" type="VBoxContainer" parent="Game_Selection/Games_Scroll_Container"]
margin_right = 423.0
margin_bottom = 1843.0
size_flags_vertical = 3

[node name="dungeon_fight_Container" type="VBoxContainer" parent="Game_Selection/Games_Scroll_Container/Games_Container"]
margin_right = 423.0
margin_bottom = 362.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="dungeon_fight_Graphic" type="TextureRect" parent="Game_Selection/Games_Scroll_Container/Games_Container/dungeon_fight_Container"]
margin_right = 423.0
margin_bottom = 294.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="dungeon_fight_Details_Button" type="Button" parent="Game_Selection/Games_Scroll_Container/Games_Container/dungeon_fight_Container"]
margin_top = 298.0
margin_right = 423.0
margin_bottom = 318.0
size_flags_vertical = 3
text = "Details"

[node name="dungeon_fight_Selection_Toggle" type="CheckButton" parent="Game_Selection/Games_Scroll_Container/Games_Container/dungeon_fight_Container"]
margin_top = 322.0
margin_right = 423.0
margin_bottom = 362.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "           Add to Queue:"
align = 1
expand_icon = true

[node name="Pomoblast_container" type="VBoxContainer" parent="Game_Selection/Games_Scroll_Container/Games_Container"]
margin_top = 366.0
margin_right = 423.0
margin_bottom = 774.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pomoblast_Graphic" type="TextureRect" parent="Game_Selection/Games_Scroll_Container/Games_Container/Pomoblast_container"]
margin_right = 423.0
margin_bottom = 340.0
size_flags_vertical = 3
texture = ExtResource( 6 )

[node name="Pomoblast_Details_Button" type="Button" parent="Game_Selection/Games_Scroll_Container/Games_Container/Pomoblast_container"]
margin_top = 344.0
margin_right = 423.0
margin_bottom = 364.0
size_flags_vertical = 3
text = "Details"

[node name="Pomoblast_Selection_Toggle" type="CheckButton" parent="Game_Selection/Games_Scroll_Container/Games_Container/Pomoblast_container"]
margin_top = 368.0
margin_right = 423.0
margin_bottom = 408.0
text = "            Add to Queue:"
align = 1

[node name="PomoBITE_Container" type="VBoxContainer" parent="Game_Selection/Games_Scroll_Container/Games_Container"]
margin_top = 778.0
margin_right = 423.0
margin_bottom = 1190.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PomoBITE_Graphic" type="TextureRect" parent="Game_Selection/Games_Scroll_Container/Games_Container/PomoBITE_Container"]
margin_right = 423.0
margin_bottom = 344.0
size_flags_vertical = 3
texture = ExtResource( 8 )

[node name="PomoBITE_Details_Button" type="Button" parent="Game_Selection/Games_Scroll_Container/Games_Container/PomoBITE_Container"]
margin_top = 348.0
margin_right = 423.0
margin_bottom = 368.0
size_flags_vertical = 3
text = "Details"

[node name="PomoBITE_Selection_Toggle" type="CheckButton" parent="Game_Selection/Games_Scroll_Container/Games_Container/PomoBITE_Container"]
margin_top = 372.0
margin_right = 423.0
margin_bottom = 412.0
text = "            Add to Queue:"
align = 1

[node name="Slowfruit" type="VBoxContainer" parent="Game_Selection/Games_Scroll_Container/Games_Container"]
margin_top = 1194.0
margin_right = 423.0
margin_bottom = 1563.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slowfruit_graphic" type="TextureRect" parent="Game_Selection/Games_Scroll_Container/Games_Container/Slowfruit"]
margin_right = 423.0
margin_bottom = 301.0
size_flags_vertical = 3
texture = ExtResource( 9 )

[node name="Slowfruit_Details_Button" type="Button" parent="Game_Selection/Games_Scroll_Container/Games_Container/Slowfruit"]
margin_top = 305.0
margin_right = 423.0
margin_bottom = 325.0
size_flags_vertical = 3
text = "Details"

[node name="Slowfruit_Selection_Toggle" type="CheckButton" parent="Game_Selection/Games_Scroll_Container/Games_Container/Slowfruit"]
margin_top = 329.0
margin_right = 423.0
margin_bottom = 369.0

[node name="PomoDefense" type="VBoxContainer" parent="Game_Selection/Games_Scroll_Container/Games_Container"]
margin_top = 1567.0
margin_right = 423.0
margin_bottom = 1843.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PomoDefense_Graphic" type="TextureRect" parent="Game_Selection/Games_Scroll_Container/Games_Container/PomoDefense"]
margin_right = 423.0
margin_bottom = 208.0
size_flags_vertical = 3
texture = ExtResource( 10 )

[node name="PomoDefense_Details_Button" type="Button" parent="Game_Selection/Games_Scroll_Container/Games_Container/PomoDefense"]
margin_top = 212.0
margin_right = 423.0
margin_bottom = 232.0
size_flags_vertical = 3
text = "Details"

[node name="PomoDefense_Selection_Toggle" type="CheckButton" parent="Game_Selection/Games_Scroll_Container/Games_Container/PomoDefense"]
margin_top = 236.0
margin_right = 423.0
margin_bottom = 276.0

[node name="No_Games_Selected_Popup_Alert" type="AcceptDialog" parent="."]
margin_left = 787.0
margin_top = 403.0
margin_right = 1075.0
margin_bottom = 461.0
size_flags_horizontal = 3
size_flags_vertical = 3
dialog_text = "You Must First Add A Game To The Queue!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No_Selection_Method_Choosen_Popup_Alert" type="AcceptDialog" parent="."]
margin_left = 795.0
margin_top = 400.0
margin_right = 1073.0
margin_bottom = 458.0
size_flags_horizontal = 3
size_flags_vertical = 3
dialog_text = "You Must Select A Method To Pull Decks!"

[node name="No_Deck_Selected_Popup_Alert" type="AcceptDialog" parent="."]
margin_left = 849.0
margin_top = 400.0
margin_right = 1024.0
margin_bottom = 458.0
size_flags_horizontal = 3
size_flags_vertical = 3
dialog_text = "You Must Select A Deck!!"

[node name="No_Category_Selected_Popup_Alert" type="AcceptDialog" parent="."]
margin_left = 849.0
margin_top = 400.0
margin_right = 1024.0
margin_bottom = 458.0
size_flags_horizontal = 3
size_flags_vertical = 3
dialog_text = "You Must Select A Category!!"

[node name="No_Time_Selected_Popup_Alert" type="AcceptDialog" parent="."]
margin_left = 787.0
margin_top = 400.0
margin_right = 1085.0
margin_bottom = 458.0
size_flags_horizontal = 3
size_flags_vertical = 3
dialog_text = "You Must Select A Desired Time To Play For!"

[node name="FadeIn" parent="." instance=ExtResource( 12 )]
visible = false
color = Color( 0, 0, 0, 1 )

[node name="Background" type="Sprite" parent="."]
show_behind_parent = true
material = SubResource( 2 )
position = Vector2( -835, 48.9999 )
scale = Vector2( 1.86621, 0.887695 )
texture = ExtResource( 15 )
offset = Vector2( 963, 462.5 )
script = ExtResource( 14 )

[connection signal="fade_out_finished" from="FadeOut" to="." method="_on_FadeOut_fade_out_finished"]
[connection signal="pressed" from="Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="Back_Button" to="." method="_on_Back_Button_pressed"]
[connection signal="pressed" from="Game_Selection/Games_Scroll_Container/Games_Container/dungeon_fight_Container/dungeon_fight_Details_Button" to="." method="_on_dungeon_fight_Details_Button_pressed"]
[connection signal="toggled" from="Game_Selection/Games_Scroll_Container/Games_Container/dungeon_fight_Container/dungeon_fight_Selection_Toggle" to="." method="_on_dungeon_fight_Selection_Toggle_toggled"]
[connection signal="pressed" from="Game_Selection/Games_Scroll_Container/Games_Container/Pomoblast_container/Pomoblast_Details_Button" to="." method="_on_Pomoblast_Details_Button_pressed"]
[connection signal="toggled" from="Game_Selection/Games_Scroll_Container/Games_Container/Pomoblast_container/Pomoblast_Selection_Toggle" to="." method="_on_Pomoblast_Selection_Toggle_toggled"]
[connection signal="pressed" from="Game_Selection/Games_Scroll_Container/Games_Container/PomoBITE_Container/PomoBITE_Details_Button" to="." method="_on_PomoBITE_Details_Button_pressed"]
[connection signal="toggled" from="Game_Selection/Games_Scroll_Container/Games_Container/PomoBITE_Container/PomoBITE_Selection_Toggle" to="." method="_on_PomoBITE_Selection_Toggle_toggled"]
[connection signal="pressed" from="Game_Selection/Games_Scroll_Container/Games_Container/Slowfruit/Slowfruit_Details_Button" to="." method="_on_Slowfruit_Details_Button_pressed"]
[connection signal="toggled" from="Game_Selection/Games_Scroll_Container/Games_Container/Slowfruit/Slowfruit_Selection_Toggle" to="." method="_on_Slowfruit_Selection_Toggle_toggled"]
[connection signal="pressed" from="Game_Selection/Games_Scroll_Container/Games_Container/PomoDefense/PomoDefense_Details_Button" to="." method="_on_PomoDefense_Details_Button_pressed"]
[connection signal="toggled" from="Game_Selection/Games_Scroll_Container/Games_Container/PomoDefense/PomoDefense_Selection_Toggle" to="." method="_on_PomoDefense_Selection_Toggle_toggled"]
[connection signal="fade_in_finished" from="FadeIn" to="." method="_on_FadeIn_fade_in_finished"]
[connection signal="item_rect_changed" from="Background" to="Background" method="_on_Background_item_rect_changed"]
